tests/bad/assign_bad_type.oc
/// fail: Variable type does not match assignment type

def main() {
    let x: bool
    x = 5
}